--- a/moviehunter/css/signup.css
+++ b/moviehunter/css/signup.css
@@ -39,7 +39,6 @@ img {
 
 .showcase {
 	width: 100%;
-	height: 100vh;
 	position: relative;
 	background: url('https://i.ibb.co/vXqDmnh/background.jpg') no-repeat center center/cover;
 }
@@ -265,7 +264,7 @@ footer {
 .container{
     max-width: 700px;
     width: 100%;
-    background: #fff;
+	background: rgb(0, 0, 0, 0.65);
     padding: 25px 30px;
     border-radius: 5px;
 }
@@ -304,6 +303,7 @@ form .user_details .input_pox{
     outline: none;
     border-radius: 5px;
     border: 1px solid #ccc;
+	background: #343434;
     padding-left: 15px;
     font-size: 16px;
     border-bottom-width: 2px;
@@ -312,7 +312,7 @@ form .user_details .input_pox{
 }
 .user_details .input_pox input:focus,
 .user_details .input_pox input:valid{
-border-color: #9b59b6;
+border-color: #d52121;
 }
 form .gender_details .gender_title{
     font-size: 20px;
@@ -339,7 +339,7 @@ border: 5px solid transparent;
 #dot-2:checked ~ .category label .two,
 #dot-3:checked ~ .category label .three{
 border-color: #d9d9d9;
-background-color: #9b59b6;
+background-color: red;
 }
 form input[type="radio"]{
     display: none;
@@ -358,7 +358,7 @@ form .button input{
     font-weight: 500;
     border-radius: 5px;
     letter-spacing: 1px;
-    background: linear-gradient(123deg, #71b8e7,#9b59b6);
+    background: red;
 
 }
 form .button input :hover{
